[gd_scene load_steps=30 format=3 uid="uid://bfxyd2q71orbl"]

[ext_resource type="Script" uid="uid://cgs4vdxquu2oq" path="res://scripts/enemy_lotus.gd" id="1_en8ch"]
[ext_resource type="Script" uid="uid://cper3rsha37eo" path="res://scripts/enemy_data.gd" id="2_gqwvd"]
[ext_resource type="Shader" uid="uid://wykxxfv30sal" path="res://shaders/flash.gdshader" id="3_gqwvd"]
[ext_resource type="Texture2D" uid="uid://b5240h5jumjff" path="res://assets/sprite/Lotusman.png" id="4_gqwvd"]

[sub_resource type="Resource" id="Resource_qliqa"]
script = ExtResource("2_gqwvd")
type = 0
xp_gain = 20
xp_steal = 10.0
metadata/_custom_type_script = "uid://cper3rsha37eo"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1464v"]
size = Vector2(19, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_da435"]
size = Vector2(19, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k7d45"]
size = Vector2(350, 350)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qliqa"]
size = Vector2(180, 24)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gqwvd"]
resource_local_to_scene = true
shader = ExtResource("3_gqwvd")
shader_parameter/flash_light = Vector4(1, 1, 1, 1)
shader_parameter/flash_amount = 0.0
shader_parameter/seed = 0.0
shader_parameter/chocolate_amount = 0.1
shader_parameter/chocolate_color = Color(0.36, 0.2, 0.09, 1)
shader_parameter/line_color = Vector4(1, 1, 1, 1)
shader_parameter/line_scale = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_gqwvd"]
atlas = ExtResource("4_gqwvd")
region = Rect2(0, 96, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7m88"]
atlas = ExtResource("4_gqwvd")
region = Rect2(24, 96, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_cyj6w"]
atlas = ExtResource("4_gqwvd")
region = Rect2(48, 96, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8boq"]
atlas = ExtResource("4_gqwvd")
region = Rect2(72, 96, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qliqa"]
atlas = ExtResource("4_gqwvd")
region = Rect2(96, 96, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_oi0rk"]
atlas = ExtResource("4_gqwvd")
region = Rect2(0, 72, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_06vrd"]
atlas = ExtResource("4_gqwvd")
region = Rect2(24, 72, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_nh8u4"]
atlas = ExtResource("4_gqwvd")
region = Rect2(48, 72, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_46ajb"]
atlas = ExtResource("4_gqwvd")
region = Rect2(72, 72, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hq6qb"]
atlas = ExtResource("4_gqwvd")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_65x8r"]
atlas = ExtResource("4_gqwvd")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_28vlo"]
atlas = ExtResource("4_gqwvd")
region = Rect2(0, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkrd3"]
atlas = ExtResource("4_gqwvd")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_skfxb"]
atlas = ExtResource("4_gqwvd")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqt1m"]
atlas = ExtResource("4_gqwvd")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7pmh"]
atlas = ExtResource("4_gqwvd")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_cyj6w"]
animations = [{
"frames": [{
"duration": 0.8,
"texture": SubResource("AtlasTexture_gqwvd")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_d7m88")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_cyj6w")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_t8boq")
}],
"loop": false,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qliqa")
}],
"loop": false,
"name": &"die_wait",
"speed": 5.0
}, {
"frames": [{
"duration": 0.8,
"texture": SubResource("AtlasTexture_oi0rk")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_06vrd")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_nh8u4")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_46ajb")
}],
"loop": true,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 0.8,
"texture": SubResource("AtlasTexture_hq6qb")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_65x8r")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 0.8,
"texture": SubResource("AtlasTexture_28vlo")
}],
"loop": false,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 0.8,
"texture": SubResource("AtlasTexture_lkrd3")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_skfxb")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_gqt1m")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_q7pmh")
}],
"loop": false,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ocnnu"]
size = Vector2(30, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lo3x6"]
size = Vector2(30, 8)

[node name="EnemyLotus" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_en8ch")
data = SubResource("Resource_qliqa")

[node name="Head" type="Marker2D" parent="."]
position = Vector2(-1, -46)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1464v")

[node name="DashHurtArea" type="Area2D" parent="." groups=["EnemyDash"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DashHurtArea"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_da435")

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="PlayerChaseExitArea" type="Area2D" parent="."]
position = Vector2(0, -88)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerChaseExitArea"]
shape = SubResource("RectangleShape2D_k7d45")

[node name="PlayerChaseArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerChaseArea"]
shape = SubResource("RectangleShape2D_qliqa")

[node name="Root" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Root"]
material = SubResource("ShaderMaterial_gqwvd")
sprite_frames = SubResource("SpriteFrames_cyj6w")
animation = &"die"

[node name="ObstacleRay" type="RayCast2D" parent="Root"]
position = Vector2(0, 9)
target_position = Vector2(30, 0)

[node name="OptionalJumpRay" type="RayCast2D" parent="Root"]
target_position = Vector2(100, -80)

[node name="HeadRay" type="RayCast2D" parent="Root"]
target_position = Vector2(0, -80)

[node name="Hand" type="Area2D" parent="Root"]
position = Vector2(15, 3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Root/Hand"]
shape = SubResource("RectangleShape2D_ocnnu")

[node name="BloodMarker" type="Marker2D" parent="Root/Hand"]
position = Vector2(-1, -6)

[node name="DeadArea" type="Area2D" parent="." groups=["EnemyDead"]]
position = Vector2(-1, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeadArea"]
shape = SubResource("RectangleShape2D_lo3x6")

[connection signal="timeout" from="FlashTimer" to="." method="_on_flash_timer_timeout"]
[connection signal="area_exited" from="PlayerChaseExitArea" to="." method="_on_player_chase_exit_area_area_exited"]
[connection signal="area_entered" from="PlayerChaseArea" to="." method="_on_player_chase_area_area_entered"]
[connection signal="animation_finished" from="Root/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
